--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@expo/vector-icons": "^14.0.0",
     "@react-native-community/blur": "^4.4.0",
     "@react-navigation/native": "^6.0.2",
+    "dayjs": "^1.11.10",
     "expo": "~50.0.14",
     "expo-font": "~11.10.3",
     "expo-linear-gradient": "~12.7.2",
